# OpenMtSciED

./: .dockerignore  .env.example  .env.vercel.example  .gitignore  .stylelintrc.json  ADMIN_MATERIAL_COURSE_LIBRARY_INTEGRATION_COMPLETE.md  AUTH_IMPROVEMENTS.md  CLEANUP_REPORT_20260419.md  CODE_OF_CONDUCT.md  DEPLOYMENT_CHECKLIST_MVP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEVELOPMENT_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  FEATURE_GAP_ANALYSIS.md  FEATURE_IMPLEMENTATION_MATRIX.md  FRONTEND_DEVELOPMENT_PLAN.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_INTEGRATION_README.md  GAP_ANALYSIS_AND_DEVELOPMENT_PLAN.md  INFRASTRUCTURE_FIX_REPORT_PHASE2.md  INTEGRATION_CHECKLIST.md  LICENSE  LOGIN_INFO.md  MACO_THEME_SUMMARY.md  MAC_MARKETING_COMPLETE_REPORT.md  MARKETING_REFACTOR_PLAN.md  MULTIROLE_DASHBOARD_DEVELOPMENT_PROGRESS.md  Makefile  NOTICE  OPENMTSCIED_API_IMPLEMENTATION.md  OPEN_SOURCE_READINESS_REPORT.md  PHASE_4_COMPLETE_REPORT.md  PRODUCTION_DEPLOYMENT_AUDIT.md  PROJECT_OPTIMIZATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_PROGRESS_OVERVIEW.md  QUESTION_BANK_POSITIONING.md  (+35 more)
.github/: PULL_REQUEST_TEMPLATE.md  ROADMAP_v0.2.0.md
admin-web/: angular.json  package-lock.json  package.json  tsconfig.app.json  vercel.json
api/: vercel.json
backend-next/: .eslintignore  .vercelignore  API_DEVELOPMENT_COMPLETE.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_FINAL_TEST_REPORT.md  API_QUICK_REFERENCE.md  CRAWLER_MIGRATION_PROGRESS.md  DATABASE_CLEANUP_REPORT.md  DEVELOPER_PORTAL_README.md  DEVELOPER_PORTAL_UPDATE.md  (+23 more)
(+1704 files in other folders)
