[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmtscied"
version = "0.1.0"
description = "Open MatuX Science Education - STEM Coherent Learning Path Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "neo4j>=5.16.0",
    "numpy>=1.26.0",
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]
